<resources>
    <string name="app_name">YummiesForDummies</string>
    <string name="title">Yummies for Dummies</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="social">Social</string>
    <string name="profile">Profile</string>
    <string name="recipe_web">Click for Full Recipe</string>
    <string name="random_recipe">http://www.themealdb.com/api/json/v1/1/random.php</string>
    <string name="youtube_tutorial">Youtube Tutorial</string>
    <string name="results">We found %1$s results.</string>
    <string name="create_account">Create Account</string>
    <string name="log_in">Log In</string>
</resources>