<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_App"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/title"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout

        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_App"
        app:tabMode="fixed"
        app:tabPaddingEnd="2dp"
        app:tabPaddingStart="2dp">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_social"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/social" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragContainer_recipe"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout">
    </androidx.fragment.app.FragmentContainerView>
</androidx.constraintlayout.widget.ConstraintLayout>